--- a/UpdateTool/UpdateTools.rc
+++ b/UpdateTool/UpdateTools.rc
@@ -48,7 +48,7 @@ BEGIN
     EDITTEXT        IDC_IN_PATH,7,18,393,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_OUT_PATH,7,45,393,12,ES_AUTOHSCROLL
     LTEXT           "请选择应用程序安装所在的目录:",IDC_TEXT_SEL_SETUP,7,7,208,8
-    LTEXT           "请选择输出的XML配置文件名:",IDC_TEXT_SEL_XML,7,35,108,8
+    LTEXT           "请选择更新文件输出的路径:",IDC_TEXT_SEL_XML,7,35,108,8
     PUSHBUTTON      "开始生成",IDC_BTN_GEN,405,17,50,14
     CONTROL         "",IDC_LIST_HASH,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,91,393,234
     LTEXT           "请选择需要加入XML的文件:",IDC_TEXT_LIST_TIP,7,82,393,8
