--- a/UpdateTool/UpdateTools.vcproj
+++ b/UpdateTool/UpdateTools.vcproj
@@ -310,7 +310,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\res\UpdateTools.rc"
+				RelativePath=".\UpdateTools.rc"
 				>
 			</File>
 		</Filter>
