--- a/UpdateTool/CMakeLists.txt
+++ b/UpdateTool/CMakeLists.txt
@@ -6,7 +6,7 @@ set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost REQUIRED COMPONENTS system thread date_time filesystem chrono locale regex)
 include_directories(${Boost_INCLUDE_DIRS})
 
-find_package(WTL)
+find_package(WTL REQUIRED)
 include_directories(${WTL_INCLUDE_DIRS})
 
 add_executable(UpdateTool WIN32 UpdateTool.cpp MainDlg.cpp stdafx.cpp Compress.cpp CheckFile.cpp AboutDlg.cpp)
