--- a/Updater/CMakeLists.txt
+++ b/Updater/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(Boost_USE_STATIC_LIBS ON)
-find_package(Boost REQUIRED)
 
+find_package(Boost REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIR})
 
-find_package(WTL)
+find_package(WTL REQUIRED)
 include_directories(${WTL_INCLUDE_DIRS})
 
 include_directories(../libupdate)
