--- a/UpdateTool/CMakeLists.txt
+++ b/UpdateTool/CMakeLists.txt
@@ -9,5 +9,9 @@ include_directories(${Boost_INCLUDE_DIRS})
 find_package(WTL REQUIRED)
 include_directories(${WTL_INCLUDE_DIRS})
 
-add_executable(UpdateTool WIN32 UpdateTool.cpp MainDlg.cpp stdafx.cpp Compress.cpp CheckFile.cpp AboutDlg.cpp)
+set(UPDATE_TOOL_SRC UpdateTool.cpp MainDlg.cpp stdafx.cpp Compress.cpp CheckFile.cpp AboutDlg.cpp)
+set(UPDATE_TOOL_HDR AboutDlg.h CheckFile.h Compress.h MainDlg.h resource.h stdafx.h)
+set(UPDATE_TOOL_RSC UpdateTools.rc)
+
+add_executable(UpdateTool WIN32 ${UPDATE_TOOL_SRC} ${UPDATE_TOOL_HDR} ${UPDATE_TOOL_RSC})
 target_link_libraries(UpdateTool ${libupdate} ${Boost_LIBRARIES} zlib tinyxml md5)
